--- a/RgSite/Views/Shared/_Layout.cshtml
+++ b/RgSite/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         </div>
     </header>
     <partial name="_NavBar" />
-    <div class="container">
+    <div class=""> <!--removed 'container' from class name-->
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
