--- a/RgSite/Views/Home/Index.cshtml
+++ b/RgSite/Views/Home/Index.cshtml
@@ -1,10 +1,29 @@
-﻿
+﻿@model RgSite.ViewModels.HomeIndexViewModel
 @{
     ViewData["Title"] = "Index";
 }
 
 
 <div class="main-section" id="products-section">
+    <div class="container">
+        <div class="row">
+            <ul class="homeColleList">
+                @foreach (var prod in Model.Products)
+                {
+                    <li>
+                        <div class="colleImg">
+                            <img src="@prod.ImageUrl" />
+                            <h2>HAIR B...</h2>
+                        </div>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+</div>
+
+
+<div class="main-section alabaster" id="stories-section">
     <div class="container">
         <h2>Services</h2>
         <h6>We offer exceptional service with complimentary hugs.</h6>
@@ -56,26 +75,6 @@
 </div>
 
 
-<div class="main-section alabaster" id="stories-section">
-    <div class="container">
-        <div class="card-columns">
-            @*@foreach (var story in Model.Stories)
-            {
-                <div class="card bg-light" style="height: 480px;">
-                    <img class="card-img-top h-75" src="@story.ImagePath" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title">@story.Name</h5>
-                        <a class="btn btn-primary" asp-controller="Artist" asp-action="Detail" asp-route-id="@story.Id">
-                            See Profile
-                        </a>
-                    </div>
-                </div>
-            }*@
-        </div>
-    </div>
-</div>
-
-
 <style>
     .featured-box-col1 i {
 	    display:block;
@@ -93,4 +92,21 @@
     .main-section {
 	    padding:90px 0 110px;
     }
+
+        ul.homeColleList {
+    list-style: none;
+    padding: 0;
+    margin: 41px 0 0 0;
+}
+
+ul.homeColleList li {
+    float: left;
+    width: 24.3%;
+    text-align: center;
+    background: #fcfcfc;
+    margin-right: 0.9%;
+    margin-bottom: 0.9%;
+    padding-bottom: 3%;
+    padding-top: 5%;
+}
 </style>
