updates to home page

--- a/RgSite/Views/Shared/_NavBar.cshtml
+++ b/RgSite/Views/Shared/_NavBar.cshtml
@@ -9,31 +9,31 @@
             <partial name="_LoginPartial" />
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">About Us</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ABOUT US</a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Products</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">PRODUCTS</a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Become A Distributor</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">BECOME A DISTRIBUTOR</a>
                 </li>
                 <li>
                     <a><img class="small-logo" src="~/images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Contact Us</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">CONTACT US</a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">RG Near You</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">RG NEAR YOU</a>
                 </li>
 
                 <!-- Dropdown -->
                 <li class="nav-item nav-tab dropdown">
                     <a class="nav-link text-dark dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        More
+                        MORE
                     </a>
                     <div class="dropdown-menu">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Media</a>
