--- a/RgSite/Views/Home/Index.cshtml
+++ b/RgSite/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <div class="card-columns">
                     @foreach (var prod in Model.Products)
                     {
-                        <div class="card bg-light" style="height: 480px;">
+                        <div class="card bg-light" style="height: 400px; width: 300px;">
                             <img class="card-img-top h-75" src="@prod.ImageUrl" alt="Card image">
                             <div class="card-body">
                                 <h5 class="card-title">@prod.Name</h5>
@@ -45,13 +45,17 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="~/images/products/amazon.jpg" alt="Los Angeles" width="1100" height="500">
+                        <img class="img-fluid mx-auto d-block" src="~/images/products/amazon.jpg" alt="Los Angeles">
+                        <div class="float-left col-sm-4 align-text-top">
+                            <p>Lightweight gel formula smoothes nad straightens hair without leaving behind a heavy residue</p>
+                        </div>
+                        
                     </div>
                     <div class="carousel-item">
-                        <img src="~/images/collections/hairb.jpg" alt="Chicago" width="1100" height="500">
+                        <img class="img-fluid mx-auto d-block" src="~/images/collections/hairb.jpg" alt="Chicago">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/images/collections/cc.jpg" alt="New York" width="1100" height="500">
+                        <img class="img-fluid mx-auto d-block" src="~/images/collections/cc.jpg" alt="New York" >
                     </div>
                 </div>
 
@@ -136,8 +140,13 @@
 	    padding:90px 0 110px;
     }
 
-      .carousel-inner img {
-      width: 100%;
-      height: 100%;
-  }
+    .carousel {
+        width: 1000px;
+        height: 500px
+    }
+
+    .carousel-inner img {
+        width: 500px;
+        height: 500px;
+    }
 </style>
