--- a/RgSite/Views/Home/Index.cshtml
+++ b/RgSite/Views/Home/Index.cshtml
@@ -43,22 +43,78 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="carousel-logo img-fluid mx-auto d-block" src="~/images/carousel-logo.png" />
-                        <h1 class="carousel-header">AMAZON X-TREME</h1>
+                        <h1 class="carousel-header amazon-slide">AMAZON X-TREME</h1>
                         <img id="carousel-img" class="img-fluid mx-auto d-block" src="~/images/amazon-nobackground.png">
                         <div class="carousel-text-div-left-top float-left col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon01.png" /></div>
                             <h4 class="carousel-text-header">WHY IT WORKS</h4>
                             <p class="carousel-text">Lightweight gel formula smoothes and straightens hair without leaving behind a heavy residue.</p>
                         </div>
                         <div class="carousel-text-div-left-bottom float-left col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon02.png" /></div>
                             <h4 class="carousel-text-header">WONDERFUL RESULTS</h4>
                             <p class="carousel-text">Unique straightening and shine! Results last for up to 12 weeks.</p>
                         </div>
+                        <div class="carousel-text-div-right-top float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon04.png" /></div>
+                            <h4 class="carousel-text-header">HOW IT WORKS</h4>
+                            <p class="carousel-text">Works effectively without smoking downtime or smell.</p>
+                        </div>
+                        <div class="carousel-text-div-right-bottom float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon05.png" /></div>
+                            <h4 class="carousel-text-header">HOW TO MAINTAIN</h4>
+                            <p class="carousel-text">Enhance and prolong the treatment with the Copacabana Shampoo and Conditioner.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img id="carousel-img" class="img-fluid mx-auto d-block" src="~/images/collections/hairb.jpg">
+                        <img class="carousel-logo img-fluid mx-auto d-block" src="~/images/carousel-logo.png" />
+                        <h1 class="carousel-header amazon-slide">AMAZON X-TREME</h1>
+                        <img id="carousel-img" class="img-fluid mx-auto d-block" src="~/images/amazon-nobackground.png">
+                        <div class="carousel-text-div-left-top float-left col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon01.png" /></div>
+                            <h4 class="carousel-text-header">WHY IT WORKS</h4>
+                            <p class="carousel-text">Lightweight gel formula smoothes and straightens hair without leaving behind a heavy residue.</p>
+                        </div>
+                        <div class="carousel-text-div-left-bottom float-left col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon02.png" /></div>
+                            <h4 class="carousel-text-header">WONDERFUL RESULTS</h4>
+                            <p class="carousel-text">Unique straightening and shine! Results last for up to 12 weeks.</p>
+                        </div>
+                        <div class="carousel-text-div-right-top float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon04.png" /></div>
+                            <h4 class="carousel-text-header">HOW IT WORKS</h4>
+                            <p class="carousel-text">Works effectively without smoking downtime or smell.</p>
+                        </div>
+                        <div class="carousel-text-div-right-bottom float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/green-icon05.png" /></div>
+                            <h4 class="carousel-text-header">HOW TO MAINTAIN</h4>
+                            <p class="carousel-text">Enhance and prolong the treatment with the Copacabana Shampoo and Conditioner.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img id="carousel-img" class="img-fluid mx-auto d-block" src="~/images/collections/cc.jpg">
+                        <img class="carousel-logo img-fluid mx-auto d-block" src="~/images/carousel-logo.png" />
+                        <h1 class="carousel-header sleek-slide">SLEEK NOW</h1>
+                        <img id="carousel-img" class="img-fluid mx-auto d-block" src="~/images/sleek-now-nobackground.png">
+                        <div class="carousel-text-div-left-top float-left col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/yellow-icon01.png" /></div>
+                            <h4 class="carousel-text-header">WHY IT WORKS</h4>
+                            <p class="carousel-text">Results are progressive, it will last for up to 1 month but can also last longer if you repeat the treatment frequently.</p>
+                        </div>
+                        <div class="carousel-text-div-left-bottom float-left col-sm-4 align-text-top">
+                            <div class="icon" style="left: -30px;"><img src="~/images/yellow-icon02.png" /></div>
+                            <h4 class="carousel-text-header">WONDERFUL RESULTS</h4>
+                            <p class="carousel-text">Straight and frizz free hair in just 20 minutes!</p>
+                        </div>
+                        <div class="carousel-text-div-right-top float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/yellow-icon04.png" /></div>
+                            <h4 class="carousel-text-header">HOW IT WORKS</h4>
+                            <p class="carousel-text">Our unique blend of acids works into the cuticle to smooth and straighten the hair for up to 1 month! </p>
+                        </div>
+                        <div class="carousel-text-div-right-bottom float-right col-sm-4 align-text-top">
+                            <div class="icon"><img src="~/images/yellow-icon05.png" /></div>
+                            <h4 class="carousel-text-header">HOW TO MAINTAIN</h4>
+                            <p class="carousel-text">Enhance and prolong the treatment with the Copacabana Shampoo and Conditioner.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -143,7 +199,7 @@
     /*Carousel
     --------------------------------------*/
     .carousel {
-        width: 1000px;        
+        width: 100%;        
     }
 
     #carousel-img {
@@ -159,7 +215,14 @@
         line-height: 62px; 
         z-index: 5; 
         white-space: nowrap; 
+    }
+
+    .amazon-slide {
         color: rgb(112, 166, 66);
+    }
+
+    .sleek-slide {
+        color: rgb(237, 188, 75);
     }
 
     .carousel-text-div-left-top {
@@ -176,6 +239,24 @@
         display: block; 
         visibility: visible; 
         left: 50px; 
+        top: 440px; 
+        z-index: 9;
+    }
+
+    .carousel-text-div-right-top {
+        position: absolute; 
+        display: block; 
+        visibility: visible; 
+        right: -90px; 
+        top: 280px; 
+        z-index: 9;
+    }
+
+    .carousel-text-div-right-bottom {
+        position: absolute; 
+        display: block; 
+        visibility: visible; 
+        right: -90px; 
         top: 440px; 
         z-index: 9;
     }
@@ -197,6 +278,11 @@
         white-space: normal; 
         font-size: 12px; 
         line-height: 22px; 
+    }
+
+    .icon {
+        position: absolute; 
+        left: -40px; 
     }
 
 </style>
