Started the collections page

--- a/RgSite/Views/Shared/_NavBar.cshtml
+++ b/RgSite/Views/Shared/_NavBar.cshtml
@@ -15,7 +15,7 @@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ABOUT US</a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">PRODUCTS</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">PRODUCTS</a>
                 </li>
                 <li class="nav-item nav-tab">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">BECOME A DISTRIBUTOR</a>
