Added a todo comment

--- a/RgSite/Views/Products/Index.cshtml
+++ b/RgSite/Views/Products/Index.cshtml
@@ -129,6 +129,8 @@
     }
 </div>*@
 
+@*todo*@
+@*set a max-width to 100% for all <img /> tags after you figure out how to remove the height for the 3 images*@
 
 <style>
     .collections {
@@ -199,9 +201,5 @@
         width: 36.55%;
     }
 
-    @media (min-width: 768px) {
-        .vc_col-sm-12 {
-            width: 100%; 
-        }
-    }
+
 </style>
